ganti nama file

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="container">
             <h2 class="thank-you fade-in">Terima kasih sudah mampir di website kami!</h2>
             <p class="fade-in" style="font-size: 1.2rem; margin-bottom: 2rem;">
-                Berikan kami ulasan Anda tentang pengalaman Anda dengan produk kami.
+                Berikan ulasan Anda tentang pengalaman Anda dengan produk kami.
                 Kami sangat menghargai setiap masukan yang Anda berikan untuk meningkatkan kualitas layanan kami.
             </p>
             
@@ -109,6 +109,7 @@
         </div>
     </section>
 
+    
     <script src="script.js"></script>
 </body>
 </html>
